// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu component matches the snapshot of the main menu 1`] = `
<DocumentFragment>
  <div
    class="Menu"
  >
    <div
      class="MenuNavbar-main"
    >
      <span
        class="MenuNavbar-button underlined"
      >
        GAMES
      </span>
      <span
        class="MenuNavbar-button"
      >
        TOOLS
      </span>
    </div>
    <div
      class="Menu-options"
    >
      <span
        class="Button regular"
        style="border-color: #89eb0a;"
      >
        <img
          alt=""
          src="[object Object]"
        />
        ART GAMES
      </span>
      <span
        class="Button regular"
        style="border-color: #ffe81a;"
      >
        <img
          alt=""
          src="[object Object]"
        />
        MUSIC GAMES
      </span>
      <span
        class="Button regular"
        style="border-color: #fd4d3a;"
      >
        <img
          alt=""
          src="[object Object]"
        />
        ALL GAMES
      </span>
      <span
        class="Button regular"
        style="border-color: #4d4f5e;"
      >
        <img
          alt=""
          src="[object Object]"
        />
        IEP GOALS
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu component renders art games 1`] = `
<span
  class="Button regular"
  style="border-color: #89eb0a;"
>
  <img
    alt=""
    src="[object Object]"
  />
  COLOR THEORY
</span>
`;

exports[`Menu component renders music games 1`] = `
<span
  class="Button regular"
  style="border-color: #4d4f5e;"
>
  <img
    alt=""
    src="[object Object]"
  />
  SEQUENCE MAKER
</span>
`;
